<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OneDrinkAway</string>
    <string name="title_activity_one_drink_away">OneDrinkAwayActivity</string>
    <string name="action_help">Help</string>
    <string name="action_home">Home</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="search_by_name">Search By Name</string>
    <string name="search_by_category">Search By Category</string>
    <string name="search_by_ingredient">Search By Ingredient</string>
    <string name="search_by_flavor">Search By Flavor</string>
    <string name="favorites">Favorites</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="try_something_new">Try Something New!</string>
    <string name="title_activity_home_page_help">HomePageHelp</string>
    <string name="help_title">Help</string>
    <string name="okay">Okay</string>
    <string name="title_activity_drink_info_page">Drink Info Page</string>
    <string name="title_activity_search_by_name">Search By Name</string>
    <string name="title_activity_search_by_category">Search By Category</string>
    <string name="title_activity_search_by_flavor">Search By Flavor</string>
    <string name="title_activity_search_by_ingredient">Search By Ingredient</string>
    <string name="title_activity_favorite_drinks">Favorite Drinks</string>
    <string name="title_activity_advanced_search">Advanced Search</string>
    <string name="ingredients"><b>Ingredients</b></string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="drink_description"><b>Description</b></string>
    <string name="bold_user_rating"><b>User Rating</b></string>
    <string name="flavor_bitter">Bitter</string>
    <string name="flavor_sweet">Sweet</string>
    <string name="flavor_citrusy">Citrusy</string>
    <string name="flavor_herbal">Herbal</string>
    <string name="flavor_minty">Minty</string>
    <string name="flavor_fruity">Fruity</string>
    <string name="flavor_sour">Sour</string>
    <string name="flavor_boozy">Boozy</string>
    <string name="flavor_spicy">Spicy</string>
    <string name="flavor_salty">Salty</string>
    <string name="flavor_creamy">Creamy</string>
    <string name="search_button">Search</string>
    <string name="flavor_0">0\n</string>
    <string name="flavor_1">1\n</string>
    <string name="flavor_2">2\n</string>
    <string name="flavor_3">3\n</string>
    <string name="flavor_4">4\n</string>
    <string name="flavor_5">5\n</string>
    <string name="instructions"><b>Instructions</b></string>
    <string name="search_by_name_help">The Search by Name Page allows you to enter the name of the drink you are looking for or scroll to browse all drinks.</string>
    <string name="flavor_profile_bold"><b>Flavor Profile</b></string>
    <string name="title_activity_results_page">Results</string>
    <string name="error_no_results_found">No Results Found\n</string>
    <string name="results_help">The Results Page shows the drinks you will like the most to the drinks that you will like the least from top to bottom that fit your search constraints. If you have rated the drink, your rating shows in red stars and if you have not yet rated the drink, then our predicted rating for you shows in yellow stars. Click on a drink to view its info page.</string>
    <string name="drink_info_help">The Drink Info page contains the given drink\'s ingredients list, description, flavor profile, and your current rating for the drink. By clicking the stars you can change your rating at any time. If you would like to save this drink, add it to your favorites list by clicking the \'Add to Favorites\' under the picture.</string>
    <string name="search_by_ingredient_help">Search By Ingredients allows you to get drink recommendations by selecting the ingredients that you would like your drink results to contain. Check the box next to the ingredient to add it to your search. You can type ingredients into the search box above and it will filter to the ingredients that start with the letters you have entered. You may check any boxes, and delete your text to view all ingredients again. Your boxes will stay checked. Click the \'Search\' button to complete your search.</string>
    <string name="advanced_search_help">Advanced Search is a combination of Search By Ingredient, Search By Flavor, Search By Category, and Search By Name.</string>
    <string name="search_by_category_help">Search By Category allows you to search for drink recommendations based on category such as \'Martinis\' or \'Shooters\' or \'Seasonal\'. Click a category icon to get started.</string>
    <string name="search_by_flavor_help">Search by flavor allows you to get drink recommendations based on your flavor preferences. Slide the each seeek bar to change the flavor intensity from 0 (least intense) to 5 (most intense).</string>
    <string name="favorite_drinks_help">Your Favorite Drinks page is where you can view, edit, and remove drinks that you have previously saved in your favorites list. You may click on any drink and you will be taken to its drink info page where you can rerate the drink at any time. Press \'Edit\' to edit and remove drinks from your list at any time.</string>
    <string name="try_something_new_help">Try Something New is the quickest way to get drink recommendations tailored to your preferences. We evaluate your current rated drinks and recommend you drinks based on what you like and what you don\'t like.</string>
    <string name="help_search_by_category">Press an icon to select the category of cocktail you want. Press and hold an icon to see information about that category.</string>
    <string name="help_search_by_ingredient">Search by Ingredients allows you to get drink recommendations by selecting the ingredients you would like in your drink. \n Check each box of the ingredients you would like. To find ingredients, you can enter the ingredient name into the search box and it will filter to the ingredients that your text starts with. To revert back to browsing all ingredients, delete the text in the search box. Your checked ingredients will stay selected. Once you have selected all the ingredients you would like, press &quot;Search&quot;</string>
    <string name="help_home_page">Welcome to OneDrinkAway, the ultimate cocktail recommendation application!\n\n<b>Browse all Drinks</b>\n\t\t&#8226;Browse all of our drink recipes in alphabetical order, as well as enter a specific drink name.\n\n<b>Search By Category</b>\n\t\t&#8226;Look for drinks by category, such as shooters, seasonal cocktails, and jello-shots.\n\n<b>Search By Ingredients</b>\n\t\t&#8226;Look for drinks by entering various ingredients.\n\n<b>Search by Flavors</b>\n\t\t&#8226;Looks for drinks by entering various flavor intensities\n\n<b>Favorite Drinks List</b>\n\t\t&#8226;Keeps track of all of your favorite drinks. You can favorite a drink when on that drink\'s info page\n\n<b>Advanced Search</b>\n\t\t&#8226;A combination of Search By Category, Ingredients, and Flavors that\'s designed for more specific searches\n\n<b>Try Something New</b>\n\t\t&#8226;Suggests a drink for the user at the touch of a button!</string>
    <string name="category_help_Drop_Shot">A drop shot, or "bomb shot," is a mixed drink that is made by mixing two drinks. A drink in a small glass (typically a shot glass) is dropped into a larger glass holding a different drink. The resulting cocktail is typically consumed as quickly as possible.</string>
    <string name="category_help_Fizz">The defining features of the fizz are an acidic juice (such as lemon or lime juice) and carbonated water. Fizzes are very similar to Sours.</string>
    <string name="category_help_Frozen">Many of these drinks are blended with ice, though some use ice cream and they often include fresh fruit.</string>
    <string name="category_help_Highball">Highballs are drinks consisting of whiskey and a mixer such as soda or ginger ale, served with ice in a tall glass.</string>
    <string name="category_help_Hot">Hot cocktails are served hot and usually made with brown liquors and heavy creams and spiced with seasonal flavors, like cinnamon and mint.</string>
    <string name="category_help_Martini">The Martini is a cocktail made with gin and vermouth, and garnished with an olive or a lemon twist. Over the years, the Martini has become one of the best-known mixed alcoholic beverages.</string>
    <string name="category_help_On_the_Rocks">"On the Rocks" is a term used when referring to a straight shot of liquor poured in a short glass filled with ice</string>
    <string name="category_help_Shaken">Shaken cocktails usually includes fruit juices, cream liqueurs, simple syrup, sour mix, egg, dairy or any other thick or flavorful mixers. Shaking will create a strained drink with a cloudy, effervescent look at first that will clear up within a few minutes after straining.</string>
    <string name="category_help_Shooter">Shooters are short, potent drinks that are mixed with a combination of spirits, liqueurs and non-alcoholic mixers. Both shooters and shots are served in shot glasses and consumed with one tip of the glass.</string>
    <string name="category_help_Shot">Shots are short, potent drinks that are mixed with a combination of epirits and liqueurs. Both shooters and shots are served in shot glasses and consumed with one tip of the glass.</string>
    <string name="category_help_Stirred">Stired cocktails usually have distilled spirits or very light mixers only. Stirring is a more gentle technique for mixing cocktails and is used to delicately combine the drinks with a perfect amount of dilution.</string>
    <string name="category_help_Up">Also know an "Neat." A drink served up (or straight up) is one in which the ingredients are chilled by either shaking or stirring, then strained into a glass, typically a cocktail glass.</string>
    <string name="advanced_search_coming_soon">Coming Soon to an App Near You!</string>
    <string name="title_activity_try_something_new">TrySomethingNew</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="done">Done</string>
    <string name="empty_favorites">Your favorite drink list is currently empty.</string>
    <string name="welcome_dialog">Welcome</string>
    <string name="welcome_dialog_message">Welcome To One Drink Away! Rate some drinks to get started.</string>
    <string name="why">Why?</string>
    <string name="no">No Thanks</string>
    <string name="sure">Sure!</string>
    <string name="rate_drinks">Rate Drinks!</string>
    <string name="bold_predicted_rating"><b>Predicted Rating</b></string>
    <string name="why_message">Rating drinks allows us to make the best possible recommendations for you. If you do not rate any drinks, our suggestions will not be as accurate.</string>
	<string name="title_activity_new_user_rating">Welcome to OneDrinkAway!</string>
	<string name="finish">Finish</string>
	<string name="ingredients_edit_text">Enter an Ingredient Here</string>
	<string name="new_user_help">To rate our most common drinks, press the Rate Common Drinks tab. To look at all of the drinks in our database, press the Find and Rate tab. To rate a drink, press the number of stars you want to rate it on the rating bar below the name of the drink. When you are finished rating drinks, press the "Finish" button.</string>
</resources>