<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.onedrinkaway.app.HomePage"
    tools:ignore="MergeRootFrame" 
    
	android:orientation="vertical" >
	
	<LinearLayout
	    android:layout_width="fill_parent"
   		android:layout_height="fill_parent"
	    android:layout_weight="1"
    	android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/search_by_name"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_gravity="center_horizontal"
	        android:drawableTop="@drawable/ic_launcher"
	        android:drawablePadding="5dp"
	        android:text="@string/search_by_name"/>

	    <TextView
	        android:id="@+id/search_by_category"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:drawablePadding="5dp"
	        android:drawableTop="@drawable/ic_launcher"
	        android:text="@string/search_by_category" />
	    
	    <TextView
	        android:id="@+id/search_by_ingredient"
			android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:drawableTop="@drawable/ic_launcher"
	        android:drawablePadding="5dp"
	        android:text="@string/search_by_ingredient"/>
	</LinearLayout>
    
    <LinearLayout
	    android:layout_width="fill_parent"
   		android:layout_height="fill_parent"
	    android:layout_weight="1"
    	android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/search_by_flavor"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_gravity="center_horizontal"
	        android:drawableTop="@drawable/ic_launcher"
	        android:drawablePadding="5dp"
	        android:text="@string/search_by_flavor"/>
	    
	    <TextView
	        android:id="@+id/favorites"
			android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_gravity="center_horizontal"
	        android:drawableTop="@drawable/ic_launcher"
	        android:drawablePadding="5dp"
	        android:text="@string/favorites"/>
	    
	    <TextView
	        android:id="@+id/advanced_search"
			android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_gravity="center_horizontal"
	        android:drawableTop="@drawable/ic_launcher"
	        android:drawablePadding="5dp"
	        android:text="@string/advanced_search"/>
	</LinearLayout>
	
    <TextView android:id="@+id/try_something_new"
	        android:layout_width="fill_parent"
   			android:layout_height="fill_parent"
	    	android:layout_weight="2"
    		android:orientation="horizontal"
	        android:layout_gravity="center_horizontal"
	        android:drawableTop="@drawable/ic_launcher"
	        android:drawablePadding="5dp"
	        android:text="@string/try_something_new"/>
</LinearLayout>

