<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    tools:context=".app.HomePage"
    tools:ignore="MergeRootFrame" >
	

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
    <!-- Linear Layout filled with ingredients list -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/drink_info_ingredients"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.2"
             android:paddingRight="10dp"
		    android:textSize="16sp"
            android:text="@string/ingredients"
             />
        
          <LinearLayout 
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_weight="1"
        	android:layout_marginRight="10dp"
              >
              
              
            <ImageView
            android:id="@+id/drink_info_glass_type"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/rocks_glass"
            
            
             />
              <ImageView
             android:id="@+id/drink_info_add_to_favorites"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:scaleType="centerInside"
             android:layout_gravity="right"
             android:clickable="true"
             android:src="@drawable/red_heart_unfilled"
             
             
                 
                 /> 
            
             
             
              
              
          </LinearLayout>  

	</LinearLayout>
	<LinearLayout
	   android:layout_width="fill_parent"
        android:layout_height="wrap_content"

		android:layout_marginTop="15dp"
        android:orientation="vertical" > 
        
	    
	    <TextView
            android:id="@+id/drink_info_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="16sp"
            android:text="@string/instructions"
             />
	 
	    
	    
	</LinearLayout>
		<TextView
	    android:layout_marginTop="15dp"
	    android:text="@string/bold_user_rating"
	    android:layout_width="wrap_content"
	    android:textSize="16sp"
	    android:layout_height="wrap_content"
	    />
	
	<RatingBar
	    android:id="@+id/drink_info_user_rating_bar"
	    style="@style/GoldRatingBar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:stepSize="1.0"
	     />
	
	<TextView
	    android:id="@+id/drink_info_predicted_text_view"
	    android:layout_marginTop="15dp"
	    android:text="@string/bold_predicted_rating"
	    android:textSize="16sp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    />
	
		<RatingBar
	    android:id="@+id/drink_info_predicted_rating_bar"
	    style="@style/RedRatingBar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:stepSize=".1"
	    android:enabled="false"
	    android:isIndicator="true"
	     />
	<LinearLayout
	    android:id="@+id/drink_info_seek_bars_layout"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
	    
	    <TextView 
	        android:id="@+id/drink_info_flavor_profile_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/flavor_profile_bold"
	        android:textSize="16sp"
	        android:layout_marginTop="15dp"
	        />
	    
	</LinearLayout>




	
</LinearLayout>
</ScrollView>   
</LinearLayout>